# SiriusxInfer

./: .gitignore  CMakeLists.txt  README.md
siriusx-infer/include/tensor/: tensor.h
siriusx-infer/src/tensor/: tensor.cpp
test/: CMakeLists.txt  test_main.cpp
test/test_arma/: test_arma.cpp
test/test_tensor/: test_tensor.cpp
